# advent_of_sql

./: .gitignore  README.md  update_readmes.py
data/: README.md  (+1 more)
polars/: README.md  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  test_all_puzzles.py
polars/2024/: README.md
polars/2024/00_the_great_christmas_analytics_crisis/: README.md
polars/2024/00_the_great_christmas_analytics_crisis_of_2024/: README.md  aosql202400.py
polars/2024/01_santas_gift_list_parser/: README.md  aosql202401.py
polars/2024/02_santas_jumbled_letters/: README.md  aosql202402.py
polars/2024/03_the_greatest_christmas_dinner_ever/: README.md  aosql202403.py
polars/2024/04_the_great_toy_tag_migration/: README.md  aosql202404.py
polars/2024/05_santas_production_dashboard/: README.md  aosql202405.py
polars/2024/06_making_presents_fairer/: README.md  aosql202406.py
polars/2024/07_santas_cartesian_elf_skill-matching_program/: README.md  aosql202407.py
polars/2024/08_the_great_north_pole_bureaucracy_bust/: README.md  aosql202408.py
polars/2024/09_reindeer_training_records/: README.md  aosql202409.py
polars/2024/10_the_christmas_party_drinking_list/: README.md  aosql202410.py
polars/2024/11_the_christmas_tree_famine/: README.md  aosql202411.py
polars/2024/12_the_great_gift_ranking/: README.md  aosql202412.py
polars/2024/13_santas_christmas_card_list/: README.md  aosql202413.py
polars/2024/14_where_is_santas_green_suit/: README.md  aosql202414.py
polars/2024/18_who_has_the_most_peers/: README.md  aosql202418.py
polars/src/aosql/: __init__.py
(+4 files in other folders)
